fix(client): right-shift on non-standard themes (closes #1646)

--- a/src/public/stylesheets/theme-next/shell.css
+++ b/src/public/stylesheets/theme-next/shell.css
@@ -108,6 +108,10 @@ body.layout-horizontal > .horizontal {
     align-items: center;
 }
 
+#launcher-container {
+    scrollbar-gutter: stable both-edges;
+}
+
 #launcher-pane.vertical {
     --launcher-pane-border-color: unset;
     --launcher-pane-background-color: var(--launcher-pane-vert-background-color);
@@ -126,6 +130,12 @@ body.layout-horizontal > .horizontal {
     padding-bottom: var(--launcher-pane-button-gap);
 }
 
+#launcher-pane.vertical #launcher-container {
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 #launcher-pane.horizontal {
     --launcher-pane-border-color: var(--launcher-pane-horiz-border-color);
     --launcher-pane-background-color: var(--launcher-pane-horiz-background-color);
@@ -142,6 +152,13 @@ body.layout-horizontal > .horizontal {
 
     height: var(--launcher-pane-size) !important;
     align-items: center;
+}
+
+#launcher-pane.horizontal #launcher-container {
+    width: 100%;
+    height: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
 @media (max-width: 991px) {
